Magnetometer defs, plus a bonus

--- a/GameData/CrowdSourcedScience/Stock/Bop/magnetometer.cfg
+++ b/GameData/CrowdSourcedScience/Stock/Bop/magnetometer.cfg
@@ -2,8 +2,8 @@
 {
     %RESULTS
     {
-        //BopInSpaceLow* =
+        BopInSpaceLow* = Even as the rest of the instruments go haywire, the magnetometer is unaffected. Is it too new? Too young and innocent to remember the calamity?
 
-        //BopInSpaceHigh* =
+        BopInSpaceHigh* = Magnetometer readings are nominal here. Huh. You'd expected something more dramatic.
     }
 }
