--- a/GameData/CrowdSourcedScience/Stock/Dres/magnetometer.cfg
+++ b/GameData/CrowdSourcedScience/Stock/Dres/magnetometer.cfg
@@ -2,8 +2,8 @@
 {
     %RESULTS
     {
-        //DresInSpaceLow* =
+        DresInSpaceLow* = The solar wind splatters against the dead rock like a hose against a sad, wilted plant. The instrument team back home collectively sighs.
 
-        //DresInSpaceHigh* =
+        DresInSpaceHigh* = Nil. Jack. Zip. If Dres had an active core once, it petered out awfully quick in solar system formation.
     }
 }
