--- a/GameData/CrowdSourcedScience/Stock/Duna/magnetometer.cfg
+++ b/GameData/CrowdSourcedScience/Stock/Duna/magnetometer.cfg
@@ -2,8 +2,8 @@
 {
     %RESULTS
     {
-        //DunaInSpaceLow* =
+        DunaInSpaceLow* = The surface deposits of magnetite here still project their own residual magnetic fields! Something must have gotten them polarized once, when Duna's core was alive. Now if only we had a few billion nukes to warm it up again...
 
-        //DunaInSpaceHigh* =
+        DunaInSpaceHigh* = Magnetic activity in space around Duna is awfully faint. Not a great sign if you don't enjoy getting blasted by radiation.
     }
 }
