--- a/GameData/CrowdSourcedScience/Stock/Eeloo/magnetometer.cfg
+++ b/GameData/CrowdSourcedScience/Stock/Eeloo/magnetometer.cfg
@@ -2,8 +2,8 @@
 {
     %RESULTS
     {
-        //EelooInSpaceLow* =
+        EelooInSpaceLow* = A thin sheath of ionized gas around Eeloo is scattering charged particles as they come in. For any relevant purposes, of course, it's not flyable.
 
-        //EelooInSpaceHigh* =
+        EelooInSpaceHigh* = Well, this icy little guy sure does not have a magnetic field. But the distance is promising for studying solar activity. The heliopause can't be too much farther out, can it? Surely?
     }
 }
