--- a/GameData/CrowdSourcedScience/Stock/Eve/magnetometer.cfg
+++ b/GameData/CrowdSourcedScience/Stock/Eve/magnetometer.cfg
@@ -2,8 +2,8 @@
 {
     %RESULTS
     {
-        //EveInSpaceLow* =
+        EveInSpaceLow* = The magnetometer hisses and crackles creepily as Eve's dense atmosphere dances and sputters against charged particles streaming in. The PR team wants to post it online with a clickbait title like 'SOUNDS FROM THE DEMON PLANET' to rake in more subscribers.
 
-        //EveInSpaceHigh* =
+        EveInSpaceHigh* = Magnetometer readings here are fuschia. Wait, no. Faint. That's the word.
     }
 }
