--- a/GameData/CrowdSourcedScience/Stock/Gilly/magnetometer.cfg
+++ b/GameData/CrowdSourcedScience/Stock/Gilly/magnetometer.cfg
@@ -2,8 +2,8 @@
 {
     %RESULTS
     {
-        //GillyInSpaceLow* =
+        GillyInSpaceLow* = Aha! Statically-charged, solar-heated micrometeorites pinging off the surface can arc all the way into space thanks to, you know, Gilly's main interesting feature. We're picking up magnetic signatures as these charges accelerate through space.
 
-        //GillyInSpaceHigh* =
+        GillyInSpaceHigh* = Nobody back home was expecting a little rock to have a huge, beautiful, complex magnetic field. Indeed, it does not.
     }
 }
