--- a/GameData/CrowdSourcedScience/Stock/Ike/magnetometer.cfg
+++ b/GameData/CrowdSourcedScience/Stock/Ike/magnetometer.cfg
@@ -2,8 +2,8 @@
 {
     %RESULTS
     {
-        //IkeInSpaceLow* =
+        IkeInSpaceLow* = If you squint a bunch, you can convince yourself it's not zero. If you squint your brain a bunch, you can convince yourself Ike maybe had its own magnetically active core once. Doing either for too long hurts.
 
-        //IkeInSpaceHigh* =
+        IkeInSpaceHigh* = Wait, what was that, something flashed by the - no, you made that up. All quiet over Ike.
     }
 }
