--- a/GameData/CrowdSourcedScience/Stock/Jool/magnetometer.cfg
+++ b/GameData/CrowdSourcedScience/Stock/Jool/magnetometer.cfg
@@ -2,8 +2,8 @@
 {
     %RESULTS
     {
-        //JoolInSpaceLow* =
+        JoolInSpaceLow* = The boom arm might as well be bending with the incredible amount of magnetism here. It isn't, because it's not made of ferromagnetic materials, but still.
 
-        //JoolInSpaceHigh* =
+        JoolInSpaceHigh* = Even from millions of kilometers out, Jool's fearsome magnetic dynamo looms over everything. The harsh spray of charged particles in its radiation belts is equally intimidating.
     }
 }
