--- a/GameData/CrowdSourcedScience/Stock/Kerbin/magnetometer.cfg
+++ b/GameData/CrowdSourcedScience/Stock/Kerbin/magnetometer.cfg
@@ -2,8 +2,8 @@
 {
     %RESULTS
     {
-        //KerbinInSpaceLow* =
+        KerbinInSpaceLow* = You thank Kerbin for its protective magnetic field, and then thank the magnetometer for being patient with you on such a mundane mission.
 
-        //KerbinInSpaceHigh* =
+        KerbinInSpaceHigh* = It may be best not to stay in Kerbin's radiation belts for too long. The magnetometer will get sad.
     }
 }
