--- a/GameData/CrowdSourcedScience/Stock/Minmus/magnetometer.cfg
+++ b/GameData/CrowdSourcedScience/Stock/Minmus/magnetometer.cfg
@@ -2,8 +2,8 @@
 {
     %RESULTS
     {
-        //MinmusInSpaceLow* =
+        MinmusInSpaceLow* = With such a stark contrast between the material and surface texture over the flats and hills, the magnetometer can tell the difference in how they scatter the solar wind. This might be useful for biome mapping if you had not already brought eyeballs.
 
-        //MinmusInSpaceHigh* =
+        MinmusInSpaceHigh* = Minmus might not have an internal magnetic field, but its surface accumulates lots of charge and a thin dust cocoon produces its own magnetic activity.
     }
 }
