--- a/GameData/CrowdSourcedScience/Stock/Moho/magnetometer.cfg
+++ b/GameData/CrowdSourcedScience/Stock/Moho/magnetometer.cfg
@@ -2,8 +2,8 @@
 {
     %RESULTS
     {
-        //MohoInSpaceLow* =
+        MohoInSpaceLow* = The magnetometer beeps in apparent frustration. No atmosphere means no cool aurorae.
 
-        //MohoInSpaceHigh* =
+        MohoInSpaceHigh* = Moho's heated-up metal-rich mass is producing some sort of dynamo effect. The solar wind buckles and obeys, at least a little.
     }
 }
