--- a/GameData/CrowdSourcedScience/Stock/Mun/magnetometer.cfg
+++ b/GameData/CrowdSourcedScience/Stock/Mun/magnetometer.cfg
@@ -2,8 +2,8 @@
 {
     %RESULTS
     {
-        //MunInSpaceLow* =
+        MunInSpaceLow* = There's at least a tiny bit of still-magnetized material on the Mun's surface which is detectable at this range - signs of the rock's once-active past, likely.
 
-        //MunInSpaceHigh* =
+        MunInSpaceHigh* = The farthest reaches of Kerbin's magnetic field give way to stony silence. Or... is that a little bit of noise above the detection limit leaking through...?
     }
 }
