--- a/GameData/CrowdSourcedScience/Stock/Pol/magnetometer.cfg
+++ b/GameData/CrowdSourcedScience/Stock/Pol/magnetometer.cfg
@@ -2,8 +2,8 @@
 {
     %RESULTS
     {
-        //PolInSpacelow* =
+        PolInSpaceLow* = The uniquely-shaped charged grains flaking off Pol's surface are interacting beautifully with the magnetic fields of Jool and the Sun together. Well, beautifully according to the instrument team back home. You can't see much.
 
-        //PolInSpaceHigh* =
+        PolInSpaceHigh* = There's no core magnetic dynamo activity here, of core-se.
     }
 }
