--- a/GameData/CrowdSourcedScience/Stock/Sun/magnetometer.cfg
+++ b/GameData/CrowdSourcedScience/Stock/Sun/magnetometer.cfg
@@ -2,8 +2,8 @@
 {
     %RESULTS
     {
-        //SunInSpaceLow* =
+        SunInSpaceLow* = The magnetometer is about to cry.
 
-        //SunInSpaceHigh* =
+        SunInSpaceHigh* = You map the Sun's magnetic field as your spacecraft performs its months-long orbital sweep. An even longer flight could monitor its change over the solar cycle... time to strand someone in space!
     }
 }
