--- a/GameData/CrowdSourcedScience/Stock/Tylo/magnetometer.cfg
+++ b/GameData/CrowdSourcedScience/Stock/Tylo/magnetometer.cfg
@@ -2,8 +2,8 @@
 {
     %RESULTS
     {
-        //TyloInSpaceLow* =
+        TyloInSpaceLow* = The readouts here are still interesting, if not tremendously high-energy. Tylo's huge mass is not exactly enough to unify gravity and electromagnetism. Still working on it.
 
-        //TyloInSpaceHigh* =
+        TyloInSpaceHigh* = Jool's magnetic field buckles as you approach. Tylo's huge core, perhaps tidally warmed by its parent, is producing its own magnetism.
     }
 }
