--- a/GameData/CrowdSourcedScience/Stock/Vall/magnetometer.cfg
+++ b/GameData/CrowdSourcedScience/Stock/Vall/magnetometer.cfg
@@ -2,8 +2,8 @@
 {
     %RESULTS
     {
-        //VallInSpaceLow* =
+        VallInSpaceLow* = The magnetometer is a little short of enrichment.
 
-        //VallInSpaceHigh* =
+        VallInSpaceHigh* = Vall sweeps through Jool's magnetic field, tranquil and complacent. Still, the report must be written.
     }
 }
