--- a/GameData/CrowdSourcedScience/Stock/Jool/barometerScan.cfg
+++ b/GameData/CrowdSourcedScience/Stock/Jool/barometerScan.cfg
@@ -19,7 +19,7 @@
         JoolFlyingHigh* = A massive blast of wind shakes the spacecraft. Of course, you didn't exactly need a barometer to tell you this.
         JoolFlyingHigh* = The atmosphere here is very dense. The glass components appear to be weakening. Let's blame the engineers if anything breaks!
 
-        //JoolInSpaceLow* =
+        JoolInSpaceLow* = The barometer shudders in anticipation.
 
         //JoolInSpaceHigh* =
     }
